--- a/about.html
+++ b/about.html
@@ -12,7 +12,11 @@
 
     <body>
 
-        <nav>
+        <div class="back-to-top button-st-white button-big">
+            <img src="icons/ArrowRight.svg" alt="arrow" class="icon-small">
+        </div>
+
+        <nav class="top-animated-block">
             <div class="nav-logo-wrap">
                 <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
@@ -37,7 +41,7 @@
             </div>
         </nav>
 
-        <section class="block block-pages">
+        <section class="block block-pages top-animated-block">
             <div class="block-pages-disc">
                 <h1 class="text-heading-1">About Our Coworking Space <span class="header-icon"><img src="icons/star.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>We're on a mission to reshape how people work and create by providing elevated coworking experiences.</p>
@@ -75,7 +79,7 @@
             </div>
         </section>
 
-        <section class="block questions">
+        <section class="block questions animated-block">
             <div class="questions-disc">
                 <p class="text-subtitle questions-disc-p">Frequently Asked Questions</p>
                 <h2 class="text-heading-2">Your Roadmap to Coworking Clarity</h2>
@@ -154,7 +158,7 @@
             </div>
         </section>
 
-        <section class="block claim">
+        <section class="block claim animated-block">
             <div class="claim-disc">
                 <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
@@ -167,13 +171,13 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="animated-block">
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
                     <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
-                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
+                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form" required>
                         <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
