--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,11 @@
 
     <body>
 
-        <nav>
+        <div class="back-to-top button-st-white button-big">
+            <img src="icons/ArrowRight.svg" alt="arrow" class="icon-small">
+        </div>
+
+        <nav class="top-animated-block">
             <div class="nav-logo-wrap">
                 <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
@@ -37,7 +41,7 @@
             </div>
         </nav>
 
-        <header class="block main-art-header">
+        <header class="block main-art-header top-animated-block">
             <div class="main-art-header-wrap">
                 <div>
                     <h1 class="text-heading-1">7 Team Collaboration Tools for Remote Teams</h1>
@@ -47,7 +51,7 @@
         </header>
 
         <section class="block articles">
-            <div class="articles-filter">
+            <div class="articles-filter top-animated-block">
                 <ul class="articles-filter-wrap">
                    <li class="button-big button-st-white button-filter filter-active">All Posts</li>
                    <li class="button-big button-st-white button-filter">Trending</li>
@@ -78,7 +82,7 @@
                             <img src="/icons/Chevron Right.svg" alt="arrow" class="icon-small">
                         </a>
                     </div>-->
-                    <div class="article-card">
+                    <div class="article-card top-animated-block">
                         <img src="images/Image (4).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -93,7 +97,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card top-animated-block">
                         <img src="images/Image (5).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -108,7 +112,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card top-animated-block">
                         <img src="images/image$4.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -123,7 +127,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$5.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -138,7 +142,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$6.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -153,7 +157,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$7.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -168,7 +172,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$8.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -183,7 +187,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$9.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -198,7 +202,7 @@
                         </a>
                     </div>
 
-                    <div class="article-card">
+                    <div class="article-card animated-block">
                         <img src="images/image$10.jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
@@ -214,7 +218,7 @@
                     </div>
             </div>
 
-                <ul class="articles-pagination">
+                <ul class="articles-pagination animated-block">
                    <li class="button-big button-st-white articles-pagination-button-icon articles-pagination-left paggination-inactive"><img src="icons/caret.svg" alt="caret" class="paggination-inactive-image"></li>
                    <li class="button-big button-st-white articles-pagination-button paggination-active">1</li>
                    <li class="button-big button-st-white articles-pagination-button">2</li>
@@ -225,7 +229,7 @@
                 </ul>
         </section>
 
-        <section class="block claim">
+        <section class="block claim animated-block">
             <div class="claim-disc">
                 <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
@@ -238,13 +242,13 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="animated-block">
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
                     <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
-                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
+                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form" required>
                         <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
