--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <body>
 
-        <nav>
+        <div class="back-to-top button-st-white button-big">
+            <img src="icons/ArrowRight.svg" alt="arrow" class="icon-small">
+        </div>
+
+        <nav class="top-animated-block">
             <div class="nav-logo-wrap">
                 <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
@@ -37,7 +41,7 @@
             </div>
         </nav>
 
-        <header class="block head">
+        <header class="block head top-animated-block">
             <div class="head-disc">
                 <h1 class="text-heading-1">Elevate Your Workspace with 
                     <span class="line-word">Cowork
@@ -53,7 +57,7 @@
             <div class="head-image"><img src="images/Image.jpg" alt="working people" class="image-main"></div>
         </header>
 
-        <section class="logos">
+        <section class="logos animated-block">
             <p class="text-subtitle">Trusted by Leading Companies</p>
             <div class="logo-wrap">
                 <img src="icons/Logo1.svg" alt="logo" class="icon-logo">
@@ -64,8 +68,8 @@
             </div>
         </section>
         
-        <section class="block choose">
-            <h2 class="text-heading-2">Why Choose span<img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Cowork?</h2>
+        <section class="block choose animated-block">
+            <h2 class="text-heading-2">Why Choose <img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Cowork?</h2>
             <div class="choose-cards-wrap">
                 <div class="choose-card">
                     <div class="choose-icon"><img src="icons/Planet.svg" alt="planet icon" class="icon-big"></div>
@@ -88,7 +92,7 @@
             </div>
         </section>
 
-        <section class="block explore">
+        <section class="block explore animated-block">
             <div class="explore-disc block-disc">
                 <p class="text-subtitle explore-disc-p">A Virtual Tour</p>
                 <h2 class="text-heading-2">Explore Cowork Through Our <img src="images/Rectangle 12.jpg" alt="decor" class="image-heading-2"> Lens</h2>
@@ -102,7 +106,7 @@
             </div>
         </section>
 
-        <section class="block stat">
+        <section class="block stat animated-block">
             <div class="stat-disc">
                 <p class="text-subtitle stat-disc-p">Cowork in Numbers</p>
                 <h2 class="text-heading-2">Transformative Statistics That Speak Volumes</h2>
@@ -196,7 +200,7 @@
             </div>
         </section>
 
-        <section class="block questions">
+        <section class="block questions animated-block">
             <div class="questions-disc">
                 <p class="text-subtitle questions-disc-p">Frequently Asked Questions</p>
                 <h2 class="text-heading-2">Your Roadmap to Coworking Clarity</h2>
@@ -275,7 +279,7 @@
             </div>
         </section>
 
-        <section class="block claim">
+        <section class="block claim animated-block">
             <div class="claim-disc">
                 <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
@@ -288,7 +292,7 @@
             </div>
         </section>
 
-        <section class="block articles">
+        <section class="block articles animated-block">
             <div class="block-disc articles-disc">
                 <p class="text-subtitle block-disc-title">Cowork Chronicles</p>
                 <h2 class="text-heading-2">Insights, Innovation, and  <img src="images/Inline Image (1).jpg" alt="decor" class="image-heading-2"> Inspiration</h2>
@@ -343,13 +347,13 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="animated-block">
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
                     <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
-                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
+                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form" required>
                         <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
