--- a/pricing.html
+++ b/pricing.html
@@ -12,7 +12,11 @@
 
     <body>
 
-        <nav>
+        <div class="back-to-top button-st-white button-big">
+            <img src="icons/ArrowRight.svg" alt="arrow" class="icon-small">
+        </div>
+
+        <nav class="top-animated-block">
             <div class="nav-logo-wrap">
                 <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
@@ -37,7 +41,7 @@
             </div>
         </nav>
 
-        <section class="pricing block block-pages">
+        <section class="pricing block block-pages top-animated-block">
             <div class="block-pages-disc">
                 <h1 class="text-heading-1">Membership Pricing <span class="header-icon"><img src="icons/proce-tag.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>Invest in spaces that drives your business. Clear, straightforward and tailored to your needs.</p>
@@ -124,7 +128,7 @@
             <p class="pricing-card-footer">All plans require a 12-month agreement. <span></span>Prices are per person.</p>
         </section>
 
-        <section class="services block">
+        <section class="services block animated-block">
             <h2 class="text-heading-2">Add-ons <img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Services</h2>
             <div class="services-cards-wrap choose-cards-wrap">
                 <div class="services-card card-def">
@@ -174,7 +178,7 @@
             </div>
         </section>
 
-        <section class="block claim">
+        <section class="block claim animated-block">
             <div class="claim-disc">
                 <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
@@ -187,13 +191,13 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="animated-block">
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
                     <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
-                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
+                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form" required>
                         <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
