--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,11 @@
 
     <body>
 
-        <nav>
+        <div class="back-to-top button-st-white button-big">
+            <img src="icons/ArrowRight.svg" alt="arrow" class="icon-small">
+        </div>
+
+        <nav class="top-animated-block">
             <div class="nav-logo-wrap">
                 <a href="index.html" class="main-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                 <div><img src="icons/List.svg" alt="burger menu" class="button-small button-st-black nav-burger"></div>
@@ -37,7 +41,7 @@
             </div>
         </nav>
 
-        <section class="block block-pages">
+        <section class="block block-pages top-animated-block">
             <div class="block-pages-disc">
                 <h1 class="text-heading-1">Contact Us <span class="header-icon"><img src="icons/chat-bubles.svg" alt="logo" class="icon-mid"></span></h1>
                 <p>Have questions about our coworking space and membership plans?  Drop us a line using the form below or give us a call.</p>
@@ -89,13 +93,13 @@
         </section>
 
 
-        <footer>
+        <footer class="animated-block">
             <div class="footer-main-wrap">
                 <div class="footer-main-form">
                     <a href="index.html" class="footer-logo"><img src="icons/Logo.svg" alt="Logo" class="icon-logo"></a>
                     <p>Join our newsletter to stay up to date on features and releases.</p>
                     <form action="#" class="footer-form-wrap">
-                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form">
+                        <input type="email" name="email" id="email" placeholder="Enter your email" class="footer-form" required>
                         <div class="footer-form-button"><button type="submit" class="button-big button-st-white">Subscribe</button></div>
                     </form>
                     <p>By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.</p>
