--- a/blog.html
+++ b/blog.html
@@ -61,8 +61,8 @@
                 </ul>
                 <div class="articles-filter-search button-big button-st-white">
                     <form action="#">
-                        <input type="search" name="search" id="search" placeholder="Search">
-                        <input type="submit" value="#">
+                        <input type="search" name="search" id="search" placeholder="Search" class="search-field">
+                        <button type="submit" class="search-button"><img src="images/Rectangle 1 (1).jpg" alt="search button"></button>
                     </form>
                 </div>
             </div>
