--- a/blog.html
+++ b/blog.html
@@ -221,9 +221,10 @@
                 <ul class="articles-pagination animated-block">
                    <li class="button-big button-st-white articles-pagination-button-icon articles-pagination-left paggination-inactive"><img src="icons/caret.svg" alt="caret" class="paggination-inactive-image"></li>
                    <li class="button-big button-st-white articles-pagination-button paggination-active">1</li>
-                   <li class="button-big button-st-white articles-pagination-button">2</li>
-                   <li class="button-big button-st-white articles-pagination-button">3</li>
-                   <li class="button-big button-st-white articles-pagination-button">4</li>
+                   <li class="button-big button-st-white articles-pagination-button pagination-mobile">...</li>
+                   <li class="button-big button-st-white articles-pagination-button pagination-desctop">2</li>
+                   <li class="button-big button-st-white articles-pagination-button pagination-desctop">3</li>
+                   <li class="button-big button-st-white articles-pagination-button pagination-desctop">4</li>
                    <li class="button-big button-st-white articles-pagination-button">5</li>
                    <li class="button-big button-st-white articles-pagination-button-icon"><img src="icons/caret.svg" alt="caret" class="articles-icon"></li>
                 </ul>
