--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                         <input type="text" name="last-name" id="last-name" placeholder="Last Name *" class="contact-input" required>
                     </div>
                     <input type="email" name="email" id="email" placeholder="Email Address *" class="contact-input" required>
-                    <input type="tel" name="phone" id="phone" placeholder="Phone *" class="contact-input" maxlength="8" required>
+                    <input type="tel" name="phone" id="phone" placeholder="Phone *" class="contact-input" required>
                     <div class="contact-select">
                         <select name="plan" id="plan" placeholder="Select a plan" class="contact-input" required>
                             <option value="" disabled selected hidden>Select a plan *</option>
