--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <section class="logos animated-block">
-            <p class="text-subtitle">Trusted by Leading Companies</p>
+            <h2 class="text-subtitle">Trusted by Leading Companies</h2>
             <div class="logo-wrap">
                 <img src="icons/Logo1.svg" alt="logo" class="icon-logo">
                 <img src="icons/Logo2.svg" alt="logo" class="icon-logo">
